新增base，统一调用baserequest参数

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,11 @@
 eclipse.preferences.version=1
 encoding//Intbee_API/Request/address/add_address.py=utf-8
 encoding//Intbee_API/Request/address/address_list.py=utf-8
+encoding//Intbee_API/Request/base/__init__.py=utf-8
+encoding//Intbee_API/Request/base/base_intbee_api_request.py=utf-8
+encoding//Intbee_API/Request/base/base_intbee_request.py=utf-8
+encoding//Intbee_API/Request/base/base_param.py=utf-8
+encoding//Intbee_API/Request/base/base_request.py=utf-8
 encoding//Intbee_API/Request/order/merchant_amount_log.py=utf-8
 encoding//Intbee_API/Request/order/order_Count.py=utf-8
 encoding//Intbee_API/Request/order/order_agree_refund.py=utf-8
@@ -24,4 +29,8 @@ encoding//Intbee_API/Request/user/users.py=utf-8
 encoding//Intbee_API/Request/user/users_add_follow.py=utf-8
 encoding//Intbee_API/Request/user/users_delete_follow.py=utf-8
 encoding//Intbee_API/Request/user/users_follow.py=utf-8
+encoding//Intbee_API/common/intbee_request.py=utf-8
+encoding//Intbee_API/common/log.py=utf-8
 encoding//Intbee_API/common/readExcel.py=utf-8
+encoding//Intbee_API/common/test_case.py=utf-8
+encoding//Intbee_API/config_testcase/__init__.py=utf-8
